force-app/main/default/objects/Trust__c/fields/Initial_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Initial_Funding_Source__c</fullName>
    <label>Initial Funding Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>