force-app/main/default/objects/Trust__c/fields/Initial_Trust_Accounting_Created__c.field-meta.xml
<CustomField>
    <fullName>Initial_Trust_Accounting_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Trust Accounting Created</label>
    <type>Checkbox</type>
</CustomField>