force-app/main/default/objects/Trust__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Trusts</relationshipLabel>
    <relationshipName>Trusts</relationshipName>
    <type>Lookup</type>
</CustomField>