force-app/main/default/objects/Trust__c/fields/Internal_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>Internal Account Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>