force-app/main/default/objects/Trust__c/fields/Investment_Change__c.field-meta.xml
<CustomField>
    <fullName>Investment_Change__c</fullName>
    <formula>True_Link_Balance__c - Transaction_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Capital gains and losses from 1/1/2025 on</inlineHelpText>
    <label>Investment Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>