force-app/main/default/objects/Trust__c/fields/Investment_Objective__c.field-meta.xml
<CustomField>
    <fullName>Investment_Objective__c</fullName>
    <label>Investment Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>