force-app/main/default/objects/Trust__c/fields/Joinder_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Joinder_Agreement__c</fullName>
    <label>Joinder Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>