force-app/main/default/objects/Trust__c/fields/Mail_Statements__c.field-meta.xml
<CustomField>
    <fullName>Mail_Statements__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mail Statements</label>
    <type>Checkbox</type>
</CustomField>