force-app/main/default/objects/Trust__c/fields/Managing_Court__c.field-meta.xml
<CustomField>
    <fullName>Managing_Court__c</fullName>
    <label>Managing Court</label>
    <length>255</length>
    <type>Text</type>
</CustomField>