force-app/main/default/objects/Trust__c/fields/Medicaid_Lien__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Lien__c</fullName>
    <label>Medicaid Lien</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>