force-app/main/default/objects/Trust__c/fields/Missing_True_Link_Integration_Fields__c.field-meta.xml
<CustomField>
    <fullName>Missing_True_Link_Integration_Fields__c</fullName>
    <formula>If(isblank(Pooled_Trust__c),&quot;Pooled Trust&quot;,&quot;&quot;)
+If(isblank(Trust_Portfolio__c),&quot;Trust_Portfolio&quot;,&quot;&quot;)
+If(isblank(Beneficiary__r.FirstName),&quot;Trust_Portfolio&quot;,&quot;&quot;)
+If(isblank(Beneficiary__r.LastName),&quot;Last Name&quot;,&quot;&quot;)
+If(isblank(Beneficiary__r.Living_Street_1__c),&quot;Living Street 1&quot;,&quot;&quot;)
+If(isblank(Beneficiary__r.Living_City__c),&quot;Living City&quot;,&quot;&quot;)
+If(isblank(text(Beneficiary__r.Living_State__c)),&quot;Living State&quot;,&quot;&quot;)
+If(isblank(Beneficiary__r.Living_Zip_Code__c),&quot;Living Zip Code&quot;,&quot;&quot;)
+If(isblank( text(Tax_Id_Number_Type__c )),&quot;Tax ID Number Type&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing True Link Integration Fields</label>
    <type>Text</type>
</CustomField>