force-app/main/default/objects/Trust__c/fields/Most_Recent_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Disbursement_Date__c</fullName>
    <label>Most Recent Disbursement Date</label>
    <summarizedField>Transaction__c.Cleared_Date__c</summarizedField>
    <summaryForeignKey>Transaction__c.Trust__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>