force-app/main/default/objects/Trust__c/fields/Most_Recent_PR_Update_Request__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_PR_Update_Request__c</fullName>
    <label>Most Recent PR Update Request</label>
    <type>Date</type>
</CustomField>