force-app/main/default/objects/Trust__c/fields/Number_of_Funding_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Funding_Records__c</fullName>
    <label># of Funding Records</label>
    <summaryForeignKey>Funding__c.Trust__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>