force-app/main/default/objects/Trust__c/fields/Number_of_Trust_Accounting_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trust_Accounting_Records__c</fullName>
    <label># of Trust Accounting Records</label>
    <summaryForeignKey>Trust_Accounting__c.Trust__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>