force-app/main/default/objects/Trust__c/fields/Number_Value_Internal_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Number_Value_Internal_Account_Number__c</fullName>
    <formula>VALUE(Internal_Account_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Value Internal Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>