force-app/main/default/objects/Trust__c/fields/Original_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_System_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Original System ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>