force-app/main/default/objects/Trust__c/fields/Other_Expected_Source_Initial_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Other_Expected_Source_Initial_Deposit__c</fullName>
    <label>Other Expected Source Initial Deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>