force-app/main/default/objects/Trust__c/fields/Other_Grantor_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Other_Grantor_Relationship__c</fullName>
    <label>Other Grantor Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>