force-app/main/default/objects/Trust__c/fields/Other_Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Section_Type__c</fullName>
    <label>Other Section Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>