force-app/main/default/objects/Trust__c/fields/Percent_Leaving_to_Estate__c.field-meta.xml
<CustomField>
    <fullName>Percent_Leaving_to_Estate__c</fullName>
    <formula>Closing__r.Percent_Leaving_to_Estate__c</formula>
    <label>Percent Leaving to Estate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>