force-app/main/default/objects/Trust__c/fields/Pool_Name__c.field-meta.xml
<CustomField>
    <fullName>Pool_Name__c</fullName>
    <label>Pool Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>