force-app/main/default/objects/Trust__c/fields/Pooled_Trust__c.field-meta.xml
<CustomField>
    <fullName>Pooled_Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pooled Trust</label>
    <referenceTo>Pooled_Trust__c</referenceTo>
    <relationshipLabel>Trusts</relationshipLabel>
    <relationshipName>Trusts</relationshipName>
    <type>Lookup</type>
</CustomField>