force-app/main/default/objects/Trust__c/fields/Primary_Rep_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Birthdate__c</fullName>
    <formula>Primary_Representative__r.Birthdate_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update Birthdate, go to the Primary Rep&apos;s Person Account record</inlineHelpText>
    <label>Primary Rep Birthdate</label>
    <type>Date</type>
</CustomField>