force-app/main/default/objects/Trust__c/fields/Primary_Rep_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_City__c</fullName>
    <formula>IF(!ISBLANK(Primary_Representative__r.PersonContact.MailingCity),
Primary_Representative__r.PersonContact.MailingCity,
Primary_Representative__r.BillingCity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep City</label>
    <type>Text</type>
</CustomField>