force-app/main/default/objects/Trust__c/fields/Primary_Rep_City_Non_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_City_Non_Formula__c</fullName>
    <label>Primary Rep City (Non Formula)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>