force-app/main/default/objects/Trust__c/fields/Primary_Rep_First_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_First_Name_Formula__c</fullName>
    <formula>Primary_Representative_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep First Name (Formula)</label>
    <type>Text</type>
</CustomField>