force-app/main/default/objects/Trust__c/fields/Primary_Rep_Information__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Information__c</fullName>
    <formula>Primary_Representative__r.FirstName + &quot; &quot; + Primary_Representative__r.LastName &amp; BR() &amp;
Primary_Representative__r.BillingStreet &amp;BR() &amp;
Primary_Representative__r.BillingCity + &quot;,&quot; +  Primary_Representative__r.BillingState &amp; Primary_Representative__r.BillingPostalCode  &amp;BR() &amp;
Primary_Representative__r.Phone &amp;BR() &amp;
Primary_Rep_Email_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Information</label>
    <type>Text</type>
</CustomField>