force-app/main/default/objects/Trust__c/fields/Primary_Rep_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Last_Update__c</fullName>
    <label>Primary Rep Last Update</label>
    <type>Date</type>
</CustomField>