force-app/main/default/objects/Trust__c/fields/Primary_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Name__c</fullName>
    <formula>Primary_Representative__r.FirstName + &quot; &quot; + Primary_Representative__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Name</label>
    <type>Text</type>
</CustomField>