force-app/main/default/objects/Trust__c/fields/Primary_Rep_Requests_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Requests_Disbursements__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <label>Primary Rep Requests Disbursements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>