force-app/main/default/objects/Trust__c/fields/Primary_Rep_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_State__c</fullName>
    <formula>IF(!ISBLANK(Primary_Representative__r.PersonContact.MailingState),
Primary_Representative__r.PersonContact.MailingState,
Primary_Representative__r.BillingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep State</label>
    <type>Text</type>
</CustomField>