force-app/main/default/objects/Trust__c/fields/Primary_Rep_State_Non_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_State_Non_Formula__c</fullName>
    <label>Primary Rep State (Non Formula)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>