force-app/main/default/objects/Trust__c/fields/Primary_Rep_Street__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Street__c</fullName>
    <formula>IF(!ISBLANK(Primary_Representative__r.PersonContact.MailingStreet),
Primary_Representative__r.PersonContact.MailingStreet,
Primary_Representative__r.BillingStreet)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Street</label>
    <type>Text</type>
</CustomField>