force-app/main/default/objects/Trust__c/fields/Primary_Rep_Update_Processed__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Update_Processed__c</fullName>
    <label>Primary Rep Update Processed</label>
    <type>Date</type>
</CustomField>