force-app/main/default/objects/Trust__c/fields/Primary_Rep_Updated_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Updated_Email__c</fullName>
    <label>Primary Rep Updated Email</label>
    <type>Email</type>
</CustomField>