force-app/main/default/objects/Trust__c/fields/Primary_Rep_Updated_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Updated_First_Name__c</fullName>
    <label>Primary Rep Updated First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>