force-app/main/default/objects/Trust__c/fields/Primary_Rep_Updated_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Updated_Phone__c</fullName>
    <label>Primary Rep Updated Phone</label>
    <type>Phone</type>
</CustomField>