force-app/main/default/objects/Trust__c/fields/Primary_Rep_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Zip_Code__c</fullName>
    <formula>IF(!ISBLANK(Primary_Representative__r.PersonContact.MailingPostalCode),
Primary_Representative__r.PersonContact.MailingPostalCode,
Primary_Representative__r.BillingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Zip Code</label>
    <type>Text</type>
</CustomField>