force-app/main/default/objects/Trust__c/fields/Primary_Rep_Zip_Code_Non_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Zip_Code_Non_Formula__c</fullName>
    <label>Primary Rep Zip Code (Non Formula)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>