force-app/main/default/objects/Trust__c/fields/Primary_Representative_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Representative_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To modify the Primary Representative, change the Role field on the Relationship record associated with this Trust.</inlineHelpText>
    <label>Primary Representative Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trusts (Primary Representative)</relationshipLabel>
    <relationshipName>Trusts3</relationshipName>
    <type>Lookup</type>
</CustomField>