force-app/main/default/objects/Trust__c/fields/Public_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Public_Benefits__c</fullName>
    <inlineHelpText>Rollup Using Declarative Rollup Helper</inlineHelpText>
    <label>Public Benefits</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>