force-app/main/default/objects/Trust__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trusts (Relationship)</relationshipLabel>
    <relationshipName>Trusts1</relationshipName>
    <type>Lookup</type>
</CustomField>