force-app/main/default/objects/Trust__c/fields/Rep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rep_Notes__c</fullName>
    <label>Rep Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>