force-app/main/default/objects/Trust__c/fields/Report_Showing_All_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Report_Showing_All_Transactions__c</fullName>
    <formula>hyperlink(&quot;/lightning/r/Report/00OVt000008ggnpMAA/view?queryScope=userFolders&amp;fv0=&quot;&amp;Id, &quot;Click for Report on All Transactions&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Report does not reflect Investment Change, starting on 1/1/2025</inlineHelpText>
    <label>Report Showing All Transactions</label>
    <type>Text</type>
</CustomField>