force-app/main/default/objects/Trust__c/fields/Representative_Payee__c.field-meta.xml
<CustomField>
    <fullName>Representative_Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representative Payee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trusts (Representative Payee)</relationshipLabel>
    <relationshipName>Trusts5</relationshipName>
    <type>Lookup</type>
</CustomField>