force-app/main/default/objects/Trust__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <label>Responsible Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>