force-app/main/default/objects/Trust__c/fields/Set_Up_Fee__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Fee__c</fullName>
    <label>Set Up Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>$250</fullName>
            </value>
            <value>
                <fullName>$500</fullName>
            </value>
            <value>
                <fullName>$750</fullName>
            </value>
            <value>
                <fullName>$1,000</fullName>
            </value>
            <value>
                <fullName>$1,250</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>