force-app/main/default/objects/Trust__c/fields/Set_Up_Fee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Fee_Comments__c</fullName>
    <label>Set Up Fee Comments</label>
    <type>TextArea</type>
</CustomField>