force-app/main/default/objects/Trust__c/fields/Source_of_Funds_1__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds_1__c</fullName>
    <label>Source of Funds 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>