force-app/main/default/objects/Trust__c/fields/Source_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds__c</fullName>
    <label>Source of Funds</label>
    <length>100</length>
    <type>Text</type>
</CustomField>