force-app/main/default/objects/Trust__c/fields/SSA_Notification__c.field-meta.xml
<CustomField>
    <fullName>SSA_Notification__c</fullName>
    <label>SSA Notification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not on SSI</fullName>
            </value>
            <value>
                <fullName>On SSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>