force-app/main/default/objects/Trust__c/fields/SSI_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>SSI_Notification_Date__c</fullName>
    <label>SSI Notification Date</label>
    <type>Date</type>
</CustomField>