force-app/main/default/objects/Trust__c/fields/SSMA_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SSMA_Date_Time__c</fullName>
    <label>SSMA Date/Time</label>
    <type>DateTime</type>
</CustomField>