force-app/main/default/objects/Trust__c/fields/Successor_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Successor_Trustee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Successor Trustee</label>
    <type>Checkbox</type>
</CustomField>