force-app/main/default/objects/Trust__c/fields/Tax_Id_Number_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id_Number_Type__c</fullName>
    <label>Tax Id Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ein</fullName>
            </value>
            <value>
                <fullName>ssn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>