force-app/main/default/objects/Trust__c/fields/taxDocRecipientConnectionId__c.field-meta.xml
<CustomField>
    <fullName>taxDocRecipientConnectionId__c</fullName>
    <label>taxDocRecipientConnectionId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>