force-app/main/default/objects/Trust__c/fields/TL_BID__c.field-meta.xml
<CustomField>
    <fullName>TL_BID__c</fullName>
    <formula>TL_BID_Conversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TL BID</label>
    <type>Text</type>
</CustomField>