force-app/main/default/objects/Trust__c/fields/TL_BID_Conversion__c.field-meta.xml
<CustomField>
    <fullName>TL_BID_Conversion__c</fullName>
    <label>TL BID Conversion</label>
    <length>30</length>
    <type>Text</type>
</CustomField>