force-app/main/default/objects/Trust__c/fields/TL_EID__c.field-meta.xml
<CustomField>
    <fullName>TL_EID__c</fullName>
    <formula>TL_EID_Conversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TL EID</label>
    <type>Text</type>
</CustomField>