force-app/main/default/objects/Trust__c/fields/TL_EID_Conversion__c.field-meta.xml
<CustomField>
    <fullName>TL_EID_Conversion__c</fullName>
    <label>TL EID Conversion</label>
    <length>30</length>
    <type>Text</type>
</CustomField>