force-app/main/default/objects/Trust__c/fields/Toolkit_Sent__c.field-meta.xml
<CustomField>
    <fullName>Toolkit_Sent__c</fullName>
    <label>Toolkit Sent</label>
    <type>Date</type>
</CustomField>