force-app/main/default/objects/Trust__c/fields/Total_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding__c</fullName>
    <inlineHelpText>Rollup of Amount field from Funding records</inlineHelpText>
    <label>Total Funding</label>
    <summarizedField>Funding__c.Amount__c</summarizedField>
    <summaryForeignKey>Funding__c.Trust__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>