force-app/main/default/objects/Trust__c/fields/Transaction_Total__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Total__c</fullName>
    <inlineHelpText>Includes capital gains and losses through 12/31/2024</inlineHelpText>
    <label>Transaction Total</label>
    <summarizedField>Transaction__c.Rollup_Amount__c</summarizedField>
    <summaryForeignKey>Transaction__c.Trust__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>