force-app/main/default/objects/Trust__c/fields/Transfer_of_an_Existing_Trust__c.field-meta.xml
<CustomField>
    <fullName>Transfer_of_an_Existing_Trust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer of an Existing Trust</label>
    <type>Checkbox</type>
</CustomField>