force-app/main/default/objects/Trust__c/fields/Trigger_PR_Request_for_Updated_Bene_Info__c.field-meta.xml
<CustomField>
    <fullName>Trigger_PR_Request_for_Updated_Bene_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger PR Request for Updated Bene Info</label>
    <type>Checkbox</type>
</CustomField>