force-app/main/default/objects/Trust__c/fields/Trigger_Request_for_Attorney_Updates__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Request_for_Attorney_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Request for Attorney Updates</label>
    <type>Checkbox</type>
</CustomField>