force-app/main/default/objects/Trust__c/fields/True_Link_Balance__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Balance__c</fullName>
    <label>TrueLink Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>