force-app/main/default/objects/Trust__c/fields/True_Link_First_Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>True_Link_First_Name_Suffix__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>True Link First Name Suffix</label>
    <type>Text</type>
</CustomField>