force-app/main/default/objects/Trust__c/fields/True_Link_ID_from_TL_Profile__c.field-meta.xml
<CustomField>
    <fullName>True_Link_ID_from_TL_Profile__c</fullName>
    <externalId>true</externalId>
    <label>True Link ID (from TL Profile)</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>