force-app/main/default/objects/Trust__c/fields/True_Link_Status__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Status__c</fullName>
    <label>True Link Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>