force-app/main/default/objects/Trust__c/fields/Truelink_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Truelink_Address_Id__c</fullName>
    <label>Truelink Address Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>