force-app/main/default/objects/Trust__c/fields/TrueLink_ID__c.field-meta.xml
<CustomField>
    <fullName>TrueLink_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TrueLink ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>