force-app/main/default/objects/Trust__c/fields/Trust_Accounting_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trust_Accounting_Start_Date__c</fullName>
    <label>Trust Accounting Start Date</label>
    <type>Date</type>
</CustomField>