force-app/main/default/objects/Trust__c/fields/Trust_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Trust_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trusts1</relationshipName>
    <type>Lookup</type>
</CustomField>