force-app/main/default/objects/Trust__c/fields/Trust_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>Trust_Coordinator_Email__c</fullName>
    <label>Trust Coordinator Email</label>
    <type>Email</type>
</CustomField>