force-app/main/default/objects/Trust__c/fields/Trust_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Trust_Coordinator_Name__c</fullName>
    <formula>Trust_Coordinator__r.FirstName + &quot; &quot; + Trust_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Coordinator Name</label>
    <type>Text</type>
</CustomField>