force-app/main/default/objects/Trust__c/fields/Trust_Joinder_Agreement_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Trust_Joinder_Agreement_Signed_Date__c</fullName>
    <label>Trust/Joinder Agreement Signed Date</label>
    <type>Date</type>
</CustomField>