force-app/main/default/objects/Trust__c/fields/Trust_Name__c.field-meta.xml
<CustomField>
    <fullName>Trust_Name__c</fullName>
    <label>Trust Name</label>
    <type>TextArea</type>
</CustomField>