force-app/main/default/objects/Trust__c/fields/Trust_Status__c.field-meta.xml
<CustomField>
    <fullName>Trust_Status__c</fullName>
    <label>Trust Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
                <default>true</default>
                <label>Intake</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Future Funded</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active-Pending</fullName>
                <isActive>false</isActive>
                <label>Active-Pending</label>
            </value>
            <value>
                <fullName>Closing requested</fullName>
                <isActive>false</isActive>
                <label>Closing requested</label>
            </value>
            <value>
                <fullName>Materials Received-Complete</fullName>
                <isActive>false</isActive>
                <label>Materials Received-Complete</label>
            </value>
            <value>
                <fullName>Pending-Active</fullName>
                <isActive>false</isActive>
                <label>Pending-Active</label>
            </value>
            <value>
                <fullName>Pending-Inactive</fullName>
                <isActive>false</isActive>
                <label>Pending-Inactive</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
            <value>
                <fullName>Returning</fullName>
                <isActive>false</isActive>
                <label>Returning</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
                <isActive>false</isActive>
                <label>Reviewed</label>
            </value>
            <value>
                <fullName>Waiting/Hold</fullName>
                <isActive>false</isActive>
                <label>Waiting/Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>